--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ title: blank # the website title (if blank, full name will be used instead)
 first_name: Min
 middle_name: 
 last_name: Li
-email: you@example.com
+email: lim33@rpi.edu
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   My personal website. Based on [*folio](https://github.com/bogoli/-folio) design.
 footer_text: >
